@@ -1,4 +1,5 @@
 iRedMail-0.8.0-beta3:
+    * Add shell scripts to backup OpenLDAP and/or MySQL in cron by default.
     * Use Dovecot-2.0 instead of 1.2.x on openSUSE-12.1.
     * Drop support for below distributions and releases:
         + Debian 5 (Lenny)
